styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: Poppins, system-ui, sans-serif;
  }
  body {
    @apply bg-gradient-to-br from-[#0d0511] to-[#090e14];
  }
}

@layer components {
  .background-image {
    background-image: url("https://pashword.vercel.app/bg.png");
    background-size: cover;
    @apply animate-bg;
  }
  .animate {
    @apply transition-all duration-300 ease-in-out;
  }
  .page-root {
    @apply flex min-h-screen w-screen flex-col items-center justify-center;
  }
  .input-text {
    @apply animate h-8 w-4/5 rounded-full bg-slate-400/20 px-4 text-center text-slate-200 shadow-slate-400/30 outline-none ring-slate-400 placeholder:text-slate-400/60 hover:shadow-lg hover:shadow-slate-400/30 hover:ring-1 hover:ring-slate-200 xxs:h-12;
  }
  .input-label {
    @apply mb-1 text-slate-400 sm:ml-16 sm:self-start;
  }
  .submit-button {
    @apply animate z-10 mt-4 h-8 w-4/5 rounded-full bg-violet-600 px-4 text-center font-medium text-slate-200 outline-none ring-violet-500 hover:shadow-lg hover:shadow-violet-500/30 hover:ring-1 hover:ring-violet-300 xxs:h-12;
  }
  .card-container {
    @apply flex max-h-64 w-80 flex-col items-center space-y-4 rounded-xl bg-gray-900 p-5;
  }
  .card-heading {
    @apply bg-gradient-to-br from-cyan-500 to-cyan-200 bg-clip-text text-lg font-semibold text-transparent;
  }
  .card-content {
    @apply text-slate-300;
  }
  .faq-button {
    @apply animate flex w-full justify-between rounded-lg bg-slate-900 px-4 py-2 text-left text-base font-medium text-slate-300 hover:bg-slate-800 focus:outline-none focus-visible:ring focus-visible:ring-slate-700 focus-visible:ring-opacity-75 md:text-lg;
  }
  .faq-text {
    @apply px-4 pt-4 pb-2 text-sm text-slate-400 md:text-base;
  }
  .progress-point {
    @apply flex h-5 w-5 flex-shrink-0 items-center justify-center rounded-full font-bold;
  }

  /*ANIMATION CLASSES*/
  .scale-in-fade {
    animation-duration: 1s;
    animation-name: scale-in-fade-animation;
  }
  @keyframes scale-in-fade-animation {
    0% {
      transform: scale(0.8);
      opacity: 0;
    }
    100% {
      transform: scale(1);
      opacity: 1;
    }
  }
  .fade-in {
    animation-duration: 1s;
    animation-name: fade-in-animation;
  }
  @keyframes fade-in-animation {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
  .fade-out {
    animation-duration: 1s;
    animation-name: fade-out-animation;
  }
  @keyframes fade-out-animation {
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }

  .fade-in-left {
    animation-duration: 1s;
    animation-name: fade-in-left-animation;
  }
  @keyframes fade-in-left-animation {
    0% {
      transform: translateX(-100px);
      opacity: 0;
    }
    100% {
      transform: translateX(0);
      opacity: 1;
    }
  }
}

@layer utilities {
  input[type="number"]::-webkit-inner-spin-button,
  input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

